# anotherProject

./: CMakeLists.txt  README.md  main.cpp
sortinglibrary/: CMakeLists.txt
sortinglibrary/include/: sorting.h
sortinglibrary/src/: sorting.cpp
